Setup of different folders for each microservice, and a CI pipeline in GH

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["shared"]
+members = ["shared", "api-gateway-service", "authentication-service", "fulfillment-service", "logging-service", "notifications-service"]
 
 resolver = "2"
 
