--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ members = ["shared", "api-gateway-service", "authentication-service", "fulfillme
 resolver = "2"
 
 [workspace.dependencies]
-tokio = { version = "1.47.1", features = ["full"]}
+tokio = { version = "1.48.0", features = ["full"]}
 serde = { version = "1.0.228", features = ["derive"]}
+serde_json = "1.0.145"
+fluvio = "0.50.1"
+futures = "0.3.31"
