--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.145"
 fluvio = "0.50.1"
 futures = "0.3.31"
+chrono = "0.4.42"
