--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -1,4 +1,3 @@
-
 name: Rust CI Build & Test
 on:
   push:
@@ -6,11 +5,8 @@ on:
   pull_request:
     branches: [ "main"]
 
-
 jobs:
-
   build-and-test:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +27,23 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      # Install Fluvio CLI
+      - name: Install Fluvio CLI
+        run: |
+          curl -fsS https://hub.infinyon.cloud/install/install.sh | bash
+          echo "$HOME/.fluvio/bin" >> $GITHUB_PATH
+
+      # Start Fluvio local cluster
+      - name: Start Fluvio cluster
+        run: |
+          fluvio cluster start --local
+          fluvio version
+
+      # Create test topic
+      - name: Create test topic
+        run: |
+          fluvio topic create test-topic --partitions 1 --replication 1 || true
+
       - name: Run Clippy Linter
         run: cargo clippy --workspace --all-targets -- -D warnings
 
@@ -39,3 +52,9 @@ jobs:
 
       - name: Build for Release
         run: cargo build --workspace --release
+
+      # Optional: Clean up Fluvio cluster
+      - name: Cleanup Fluvio
+        if: always()
+        run: |
+          fluvio cluster delete --local || true
