--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["shared", "api-gateway-service", "authentication-service", "fulfillment-service", "logging-service", "notifications-service"]
+members = ["shared", "api-gateway-service", "authentication-service", "fulfillment-service", "logging-service", "notifications-service", "events-bus-service"]
 
 resolver = "2"
 
@@ -10,3 +10,6 @@ serde_json = "1.0.145"
 fluvio = "0.50.1"
 futures = "0.3.31"
 chrono = "0.4.42"
+futures-util = "0.3"
+anyhow = "1.0"
+thiserror = "2.0.17"
