Edited the event bus, way too many expects that would return a panic and close the application, also implemented the creation of the topic from the codebase rather than manually doing it, and removed it from the git ci workflow

--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -39,10 +39,6 @@ jobs:
           fluvio cluster start --local
           fluvio version
 
-      # Create test topic
-      - name: Create test topic
-        run: |
-          fluvio topic create test-topic --partitions 1 --replication 1 || true
 
       - name: Run Clippy Linter
         run: cargo clippy --workspace --all-targets -- -D warnings
@@ -57,4 +53,4 @@ jobs:
       - name: Cleanup Fluvio
         if: always()
         run: |
-          fluvio cluster delete --local || true
+          fluvio cluster delete || true
