--- a/events-bus-service/Cargo.toml
+++ b/events-bus-service/Cargo.toml
@@ -16,3 +16,6 @@ futures-util = { workspace = true}
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 futures = { workspace = true }
+
+# Internal Dependencies
+logging-service = { path = "../logging-service" }
