--- a/fulfillment-service/Cargo.toml
+++ b/fulfillment-service/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2021"
 serde = { workspace = true}
 tokio = { workspace = true }
 chrono = { workspace = true}
+
+# Local Dependencies
+shared = { path = "../shared" }
