--- a/logging-service/Cargo.toml
+++ b/logging-service/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 # Crate Dependencies
+prometheus = { version = "0.14", features = ["process"] }
+lazy_static = "1.4"
+prometheus_exporter = "0.8.5"
 
 # Workspace Dependencies
 serde = { workspace = true}
