Prometheus exporter now a workspace dependency, due to each crate needing it independently, more work on event-bus-service to get it to working model, tests had to be changed, added compression, linger etc

--- a/events-bus-service/Cargo.toml
+++ b/events-bus-service/Cargo.toml
@@ -16,6 +16,8 @@ futures-util = { workspace = true}
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 futures = { workspace = true }
+prometheus_exporter = { workspace = true }
+
 
 # Internal Dependencies
 logging-service = { path = "../logging-service" }
